--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu"
-        android:theme="@style/bottomNav_Font"/>
+        android:theme="@style/bottomNav_Font"
+        app:layout_behavior = "@string/hide_bottom_view_on_scroll_behavior"/>
 
 
     <fragment
