--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -24,6 +24,7 @@
             android:layout_margin="10dp"
             android:background="@color/white"
             android:clickable="true"
+            android:focusable="true"
             app:cardCornerRadius="30dp">
 
             <ImageView
