--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -19,6 +19,7 @@
         android:src="@drawable/ic_baseline_arrow_back_24"/>
 
     <TextView
+        android:id="@+id/tv1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,5 +28,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="Suck"
         android:textSize="40sp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
