--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,6 +9,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/itemCard"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -24,17 +25,14 @@
             android:layout_margin="10dp"
             android:background="@color/white"
             android:clickable="true"
-            android:focusable="true"
-            app:cardCornerRadius="30dp">
+            android:focusable="true">
 
             <ImageView
                 android:id="@+id/image1"
                 android:layout_width="match_parent"
                 android:layout_height="270dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"/>
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/price"
@@ -45,7 +43,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="@id/image1"
                 app:layout_constraintTop_toBottomOf="@id/image1"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="5dp"/>
 
             <TextView
                 android:id="@+id/info"
@@ -53,7 +51,7 @@
                 android:fontFamily="@font/nokia_sans_regular"
                 app:layout_constraintStart_toStartOf="@id/image1"
                 app:layout_constraintTop_toBottomOf="@id/price"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black" />
@@ -64,7 +62,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="@id/image1"
                 app:layout_constraintTop_toBottomOf="@id/info"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/nokia_sans_regular"
                 android:textColor="@color/dark_gray"/>
 
@@ -74,7 +72,6 @@
 
     </androidx.cardview.widget.CardView>
 
-
-    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
