--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -34,5 +34,8 @@
         <action
             android:id="@+id/action_itemFragment2_to_navigation_home"
             app:destination="@id/navigation_home" />
+        <argument
+            android:name="reCatalog"
+            app:argType="com.example.bishkekrielt.data.model.Recatalog" />
     </fragment>
 </navigation>
