--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -19,7 +21,6 @@
         app:menu="@menu/bottom_nav_menu"
         android:theme="@style/bottomNav_Font"
         app:layout_behavior = "@string/hide_bottom_view_on_scroll_behavior"/>
-
 
     <fragment
         android:id="@+id/nav_host_fragment"
