--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -6,6 +6,163 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.home.ItemFragment">
 
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/scrollImage"
+                android:layout_width="match_parent"
+                android:layout_height="270dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+            
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/scrollImage">
+
+
+                <TextView
+                    android:id="@+id/price1"
+                    android:text="32 0000 kgs/мес"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="25sp"
+                    android:fontFamily="@font/nokia_sans_bold"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/rooms"
+                    android:text="2 комн."
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/price1"
+                    app:layout_constraintStart_toStartOf="@id/price1"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/nokia_sans_regular"/>
+
+                <TextView
+                    android:id="@+id/roomsTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/rooms"
+                    app:layout_constraintStart_toStartOf="@id/rooms"
+                    android:text="квартира"
+                    android:fontFamily="@font/nokia_sans_regular"
+                    android:textSize="15sp"/>
+
+                <TextView
+                    android:id="@+id/area"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintLeft_toRightOf="@id/rooms"
+                    android:layout_marginStart="20dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="20м2"
+                    android:fontFamily="@font/nokia_sans_regular"
+                    app:layout_constraintTop_toBottomOf="@id/price1"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/area"
+                    app:layout_constraintStart_toStartOf="@id/area"
+                    android:textSize="15sp"
+                    android:text="общая"
+                    android:fontFamily="@font/nokia_sans_regular"/>
+
+                <TextView
+                    android:id="@+id/kitchen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintLeft_toRightOf="@id/area"
+                    app:layout_constraintTop_toBottomOf="@id/price1"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/nokia_sans_regular"
+                    android:text="15м2"
+                    android:layout_marginStart="20dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/kitchen"
+                    app:layout_constraintStart_toStartOf="@id/kitchen"
+                    android:textSize="15sp"
+                    android:text="кухня"
+                    android:fontFamily="@font/nokia_sans_regular"/>
+
+                <TextView
+                    android:id="@+id/floor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/price1"
+                    app:layout_constraintLeft_toRightOf="@id/kitchen"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/nokia_sans_regular"
+                    android:text="5/10"
+                    android:layout_marginStart="20dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/floor"
+                    app:layout_constraintStart_toStartOf="@id/floor"
+                    android:fontFamily="@font/nokia_sans_regular"
+                    android:textSize="15sp"
+                    android:text="этажи"/>
+
+                <TextView
+                    android:id="@+id/loca"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/floor"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginStart="10dp"
+                    android:text="Расположение:"
+                    android:fontFamily="@font/nokia_sans_bold"
+                    android:textColor="@color/black"
+                    android:textSize="40sp"/>
+
+                <TextView
+                    android:id="@+id/tvLocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/loca"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/nokia_sans_regular"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        
+
+
+
+        
+        
+    </androidx.core.widget.NestedScrollView>
+
     <ImageView
         android:id="@+id/btnBack"
         android:clickable="true"
@@ -16,18 +173,9 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
-        android:src="@drawable/ic_baseline_arrow_back_24"/>
+        android:src="@drawable/ic_baseline_arrow_back_24"
+        android:contentDescription="TODO" />
 
-    <TextView
-        android:id="@+id/tv1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Suck"
-        android:textSize="40sp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
