--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -38,4 +38,13 @@
             android:name="reCatalog"
             app:argType="com.example.bishkekrielt.data.model.Recatalog" />
     </fragment>
+    <activity
+        android:id="@+id/splashScreenActivity"
+        android:name="com.example.bishkekrielt.ui.splash.SplashScreenActivity"
+        android:label="splash_activity"
+        tools:layout="@layout/splash_activity" />
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.example.bishkekrielt.MainActivity"
+        android:label="MainActivity" />
 </navigation>
