--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -5,17 +5,80 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_notifications"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+
+    <View
+        android:id="@+id/border"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@android:color/darker_gray"
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
+
+    <TextView
+        android:id="@+id/profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Профиль"
+        android:textSize="26sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/nokia_sans_bold"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"/>
+
+    <ImageView
+        android:id="@+id/person"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@id/border"
+        app:layout_constraintStart_toStartOf="@id/profile"
+        android:src="@drawable/ic_baseline_person_24"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/person"
+        app:layout_constraintTop_toTopOf="@id/person"
+        app:layout_constraintBottom_toBottomOf="@id/person"
+        android:layout_marginStart="25dp"
+        android:text="Имя Пользователя"
+        android:fontFamily="@font/nokia_sans_regular"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:gravity="center"/>
+
+    <View
+        android:id="@+id/border1"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/person"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/darker_gray"
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
+
+    <ImageView
+        android:id="@+id/settings"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@id/border1"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/person"
+        android:fontFamily="@font/nokia_sans_regular"
+        android:src="@drawable/ic_baseline_settings_24"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/settings"
+        app:layout_constraintBottom_toBottomOf="@id/settings"
+        android:textSize="20sp"
+        android:fontFamily="@font/nokia_sans_regular"
+        android:text="Настройки"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toEndOf="@id/settings"
+        android:layout_marginStart="25dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
