--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -42,8 +42,16 @@
                 android:fontFamily="@font/nokia_sans_bold"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="@id/image1"
-                app:layout_constraintTop_toBottomOf="@id/image1"
-                android:layout_marginTop="5dp"/>
+                app:layout_constraintTop_toBottomOf="@id/image1"/>
+
+            <CheckBox
+                android:id="@+id/chRv"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                app:layout_constraintTop_toTopOf="@id/price"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="20dp"
+                android:button="@drawable/selector"/>
 
             <TextView
                 android:id="@+id/info"
@@ -66,6 +74,14 @@
                 android:fontFamily="@font/nokia_sans_regular"
                 android:textColor="@color/dark_gray"/>
 
+            <View
+                android:id="@+id/border"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/addres"
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="@android:color/darker_gray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
