--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.splash.SplashScreenActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/splash"
