--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -9,7 +9,7 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:fillViewport="true"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -151,16 +151,21 @@
                     android:textSize="20sp"
                     android:fontFamily="@font/nokia_sans_regular"/>
 
+                <com.yandex.mapkit.mapview.MapView
+                    android:id="@+id/mapView"
+                    android:layout_width="match_parent"
+                    android:layout_height="270dp"
+                    app:layout_constraintTop_toBottomOf="@id/tvLocation"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         
 
-
-
-        
-        
     </androidx.core.widget.NestedScrollView>
 
     <ImageView
