--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -155,8 +155,21 @@
                     android:id="@+id/mapView"
                     android:layout_width="match_parent"
                     android:layout_height="270dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
                     app:layout_constraintTop_toBottomOf="@id/tvLocation"
                     app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/mapView"
+                    android:textSize="40sp"
+                    android:text="О Квартире"
+                    app:layout_constraintStart_toStartOf="@id/loca"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/nokia_sans_bold"/>
 
 
 
