--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -22,10 +22,11 @@
             android:id="@+id/itemConstr"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
             android:background="@color/white"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp">
 
             <ImageView
                 android:id="@+id/image1"
