--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/notificationsFragment"
         android:icon="@drawable/ic_baseline_person_24"
         android:title="@string/title_notifications" />
 
