--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/scrollImage"
                 android:layout_width="match_parent"
                 android:layout_height="270dp"
