--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp">
 
-            <ImageView
+            <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/image1"
                 android:layout_width="match_parent"
                 android:layout_height="270dp"
