--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="5dp"
-    android:background="@android:color/white"
+    android:background="@color/dark_gray"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        app:cardCornerRadius="5dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground">
@@ -26,12 +25,12 @@
             android:clickable="true"
             android:focusable="true"
             android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp">
+            android:layout_marginEnd="5dp">
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/image1"
                 android:layout_width="match_parent"
-                android:layout_height="270dp"
+                android:layout_height="250dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
