--- a/app/src/main/res/layout/viewpager_view.xml
+++ b/app/src/main/res/layout/viewpager_view.xml
@@ -9,6 +9,8 @@
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         app:cardCornerRadius="20dp">
 
         <ImageView
