--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -3,36 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="20dp"
-    android:background="@color/dark_gray"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/itemCard"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_height="350dp"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?attr/selectableItemBackground">
+        android:layout_marginStart="3dp"
+        app:cardCornerRadius="20dp"
+        android:layout_marginEnd="3dp"
+        app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/itemConstr"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
             android:clickable="true"
-            android:focusable="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp">
+            android:focusable="true">
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/image1"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="225dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/price"
@@ -74,19 +71,12 @@
                 android:fontFamily="@font/nokia_sans_regular"
                 android:textColor="@color/dark_gray"/>
 
-            <View
-                android:id="@+id/border"
-                android:layout_marginTop="5dp"
-                app:layout_constraintTop_toBottomOf="@id/addres"
-                app:layout_constraintStart_toStartOf="parent"
-                android:background="@android:color/darker_gray"
-                android:layout_width="match_parent"
-                android:layout_height="1dp" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
